bug#41905 02.diff In alter table move invalidate old version to commit.